# PRM-Math

./: .gitignore  MCTS_Math_Colab_vLLM.ipynb  Makefile  PRM_Math_Colab.ipynb  PRM_Math_Colab_New.ipynb  PRM_Math_Colab_V2.ipynb  PRM_Math_Colab_V2_New_2.ipynb  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: default.yaml
scripts/: __init__.py  evaluate.py  inference.py  mcts.py  train.py
src/: __init__.py  config_parser.py  dataset.py  model.py  utils.py
src/eval/: __init__.py  answers.py  benchmarks.py
src/scoring/: __init__.py  verifier.py
tests/: test_answer_normalization.py  test_benchmark_adapters.py  test_cli_entrypoints.py  test_verifier_contract.py
